# plowtech-net

./: .gitignore  Build.hs  README.md  Shakefile.hs  circle.yml  contact.markdown.org  index.html  jenkins.sh  production-ready-products.txt  todo.org
_build/: .shake.database
assets/css/: stylin.css
assets/js/: scriptin.js
plowtech-hakyll/: cabal.config  contact.markdown  contact.markdown.org  example-document.org  index.html  plowtech-hakyll.cabal  site.hs  stack.yaml
plowtech-hakyll/assets/css/: stylin.css  video-js.css
plowtech-hakyll/assets/js/: video.js
plowtech-hakyll/contact/: contact.markdown.org  contact.md
plowtech-hakyll/frontpage/: packages-pay.md
plowtech-hakyll/onping/: info.md
plowtech-hakyll/products/: 11onping.org  21rtu.org  31transferdrive.org  41solarpanelpackage.org  42windturbine  42windturbine.org  51plow-poc.org  61pumpoffdrivepackage.org  71hp-automation.org  88compressordrive.org  91swd.org  95tank-battery.org  compressordrive.org  example-product.org  hp-automation.org  onping.org  plow-poc.org  pumpoffdrivepackage.org  rtu.org  solarpanelpackage.org  swd.org  tank-battery.org  transferdrive.org
plowtech-hakyll/src/Elements/: Compilers.hs
plowtech-hakyll/templates/: carousel.html  default.html  product-list.html  product.html
plowtech-hakyll/templates/frontpage/: package-points.html
