name:               plowtech-hakyll
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    attoparsec
                  , base == 4.*
                  , bytestring
                  , hakyll == 4.7.*
                  , lens
                  , orgmode-parse == 0.1.*
                  , text
                  , vector 
  ghc-options:      -threaded
  default-language: Haskell2010


  