name:               plowtech-hakyll
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    attoparsec
                  , base == 4.*
                  , bytestring
                  , hakyll == 4.7.*
                  , html-conduit
                  , lens
                  , orgmode-parse == 0.1.*
                  , text
                  , vector
                  , containers
                  , xml-conduit
                  , xml-conduit 
                  , xml-lens
  ghc-options:      -threaded
  default-language: Haskell2010


  